--- a/src/main/resources/templates/inbox.html
+++ b/src/main/resources/templates/inbox.html
@@ -24,3 +24,52 @@
     <a href="/messages/send">Yeni Mesaj Gönder</a>
 </body>
 </html>
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="../static/css/style.css"
+      th:href="@{/css/style.css}"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div th:replace="~{fragments/navbar :: navbar}"></div>
+    <!-- Table -->
+
+    <div class="container table-responsive">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col">Gönderen</th>
+            <th scope="col">Şifreli Mesaj</th>
+            <th scope="col">Çözülmüş Mesaj</th>
+            <th scope="col">Tarih</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr th:each="message, iterStat : ${messages}">
+            <td th:text="${message.sender.username}">Gönderen</td>
+            <td
+              th:text="${#strings.length(message.encryptedMessage) > 25 ? message.encryptedMessage.substring(0, 25) + '...' : message.encryptedMessage}"
+            >
+              Şifreli Mesaj
+            </td>
+            <td th:text="${decryptedMessages[iterStat.index]}">Çözülmüş Mesaj</td>
+            <td th:text="${message.timestamp}">Tarih</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <!-- Send Message Button -->
+    <div class="text-center mt-4">
+      <a href="/messages/send" class="btn btn-primary btn-lg">Yeni Mesaj Gönder</a>
+    </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
+</html>
