--- a/src/main/resources/templates/sendMessage.html
+++ b/src/main/resources/templates/sendMessage.html
@@ -8,6 +8,13 @@
     <form method="post" action="/messages/send">
         <label for="senderUsername">Gönderen Kullanıcı Adı:</label>
         <input type="text" id="senderUsername" name="senderUsername" required/><br/><br/>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet">
+</head>
+<body>
+    <div class="container">
+        <div th:replace="~{fragments/navbar :: navbar}"></div>
 
         <label for="receiverUsername">Alıcı Kullanıcı Adı:</label>
         <input type="text" id="receiverUsername" name="receiverUsername" required/><br/><br/>
