--- a/src/main/resources/templates/inbox.html
+++ b/src/main/resources/templates/inbox.html
@@ -9,80 +9,44 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <!-- Custom CSS -->
-    <style>
-      body {
-        background-color: #f8f9fa;
-        font-family: "Arial", sans-serif;
-      }
-      .table {
-        margin-top: 20px;
-        background-color: #ffffff;
-        border-radius: 8px;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      }
-      .table th {
-        background-color: #007bff;
-        color: white;
-      }
-      .btn-primary {
-        background-color: #007bff;
-        border: none;
-        transition: background-color 0.3s ease;
-      }
-      .btn-primary:hover {
-        background-color: #0056b3;
-      }
-      .header {
-        margin-top: 20px;
-      }
-      .header h1 {
-        font-size: 2.5rem;
-        color: #333;
-      }
-    </style>
+    <link
+      href="../static/css/style.css"
+      th:href="@{/css/style.css}"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <div class="container">
-      <!-- Header -->
-      <div class="header text-center">
-        <h1>Gelen Kutusu</h1>
-      </div>
+    <div th:replace="~{fragments/navbar :: navbar}"></div>
+    <!-- Table -->
 
-      <!-- Table -->
-      <div class="table-responsive">
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th scope="col">Gönderen</th>
-              <th scope="col">Şifreli Mesaj</th>
-              <th scope="col">Çözülmüş Mesaj</th>
-              <th scope="col">Tarih</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr th:each="message, iterStat : ${messages}">
-              <td th:text="${message.sender.username}">Gönderen</td>
-              <td
-                th:text="${#strings.length(message.encryptedMessage) > 25 ? message.encryptedMessage.substring(0, 25) + '...' : message.encryptedMessage}"
-              >
-                Şifreli Mesaj
-              </td>
-              <td th:text="${decryptedMessages[iterStat.index]}">
-                Çözülmüş Mesaj
-              </td>
-              <td th:text="${message.timestamp}">Tarih</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+    <div class="container table-responsive">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col">Gönderen</th>
+            <th scope="col">Şifreli Mesaj</th>
+            <th scope="col">Çözülmüş Mesaj</th>
+            <th scope="col">Tarih</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr th:each="message, iterStat : ${messages}">
+            <td th:text="${message.sender.username}">Gönderen</td>
+            <td
+              th:text="${#strings.length(message.encryptedMessage) > 25 ? message.encryptedMessage.substring(0, 25) + '...' : message.encryptedMessage}"
+            >
+              Şifreli Mesaj
+            </td>
+            <td th:text="${decryptedMessages[iterStat.index]}">Çözülmüş Mesaj</td>
+            <td th:text="${message.timestamp}">Tarih</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 
-      <!-- Send Message Button -->
-      <div class="text-center mt-4">
-        <a href="/messages/send" class="btn btn-primary btn-lg"
-          >Yeni Mesaj Gönder</a
-        >
-      </div>
+    <!-- Send Message Button -->
+    <div class="text-center mt-4">
+      <a href="/messages/send" class="btn btn-primary btn-lg">Yeni Mesaj Gönder</a>
     </div>
 
     <!-- Bootstrap JS -->
