--- a/src/main/resources/templates/sendMessage.html
+++ b/src/main/resources/templates/sendMessage.html
@@ -6,39 +6,11 @@
     <title>Mesaj Gönder</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom CSS -->
-    <style>
-        body {
-            background-color: #f8f9fa;
-            font-family: 'Arial', sans-serif;
-        }
-        .form-container {
-            margin-top: 50px;
-            background-color: #ffffff;
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        .btn-primary {
-            background-color: #007bff;
-            border: none;
-            transition: background-color 0.3s ease;
-        }
-        .btn-primary:hover {
-            background-color: #0056b3;
-        }
-        .btn-secondary {
-            margin-top: 15px;
-            text-decoration: none;
-        }
-    </style>
+    <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <!-- Header -->
-        <div class="text-center mt-4">
-            <h1>Mesaj Gönder</h1>
-        </div>
+        <div th:replace="~{fragments/navbar :: navbar}"></div>
 
         <!-- Form -->
         <div class="form-container mx-auto col-md-6">
