--- a/src/main/resources/templates/sent.html
+++ b/src/main/resources/templates/sent.html
@@ -9,45 +9,15 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <!-- Custom CSS -->
-    <style>
-      body {
-        background-color: #f8f9fa;
-        font-family: "Arial", sans-serif;
-      }
-      .table {
-        margin-top: 20px;
-        background-color: #ffffff;
-        border-radius: 8px;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      }
-      .table th {
-        background-color: #007bff;
-        color: white;
-      }
-      .btn-primary {
-        background-color: #007bff;
-        border: none;
-        transition: background-color 0.3s ease;
-      }
-      .btn-primary:hover {
-        background-color: #0056b3;
-      }
-      .header {
-        margin-top: 20px;
-      }
-      .header h1 {
-        font-size: 2.5rem;
-        color: #333;
-      }
-    </style>
+    <link
+      href="../static/css/style.css"
+      th:href="@{/css/style.css}"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <div th:replace="~{fragments/navbar :: navbar}"></div>
     <div class="container">
-      <!-- Header -->
-      <div class="header text-center">
-        <h1>Gönderilen Mesajlar</h1>
-      </div>
 
       <!-- Table -->
       <div class="table-responsive">
