--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 .navbar-container {
     position: sticky;
     top: 0;
@@ -55,7 +57,7 @@
 
 body {
     background-color: #24273a;
-    font-family: "Arial", sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 .table {
@@ -67,6 +69,10 @@ body {
 .table th {
     background-color: #ed8796;
     color: rgb(241, 246, 249);
+    text-align: center;
+}
+.table td {
+    text-align: center;
 }
 
 
@@ -78,6 +84,10 @@ body {
 
 .btn-primary:hover {
     background-color: #ff677d;
+    color: white;
+}
+.btn-lg:hover {
+    color: white;
 }
 
 .header {
@@ -96,6 +106,7 @@ body {
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
+
 .form select {
     width: 100%;
     padding: 10px;
@@ -116,4 +127,30 @@ body {
 
 .btn-secondary:hover {
     background-color: #dd7878;
+}
+
+a.btn {
+    text-decoration: none;
+    color: black;
+    transition: color 0.3s ease;
+    font-weight: 500;
+}
+
+a.btn:hover {
+    color: #eeeeee;
+    transition: color 0.3s ease;
+}
+.reg:hover, .log:hover {
+    color: #ed8796 !important;
+    transition: color 0.3s ease;
+}
+
+input:focus {
+    box-shadow: 0 0 5px #ed8796 !important;
+    border-color: #ff677d !important;
+}
+
+input:focus-visible {
+    border-color: #ff677d !important;
+    box-shadow: 0 0 5px #ed8796 !important;
 }
