--- a/src/main/resources/templates/inbox.html
+++ b/src/main/resources/templates/inbox.html
@@ -7,11 +7,17 @@
     <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      th:href="@{/css/bootstrap.min.css}"
       rel="stylesheet"
     />
     <link
       href="../static/css/style.css"
       th:href="@{/css/style.css}"
+      rel="stylesheet"
+    />
+    <link
+      href="../static/css/fa-all-min.css"
+      th:href="@{/css/fa-all-min.css}"
       rel="stylesheet"
     />
   </head>
@@ -27,6 +33,7 @@
             <th scope="col">Şifreli Mesaj</th>
             <th scope="col">Çözülmüş Mesaj</th>
             <th scope="col">Tarih</th>
+            <th scope="col">İşlem</th>
           </tr>
         </thead>
         <tbody>
@@ -37,8 +44,17 @@
             >
               Şifreli Mesaj
             </td>
-            <td th:text="${decryptedMessages[iterStat.index]}">Çözülmüş Mesaj</td>
+            <td th:text="${decryptedMessages[iterStat.index]}">
+              Çözülmüş Mesaj
+            </td>
             <td th:text="${message.timestamp}">Tarih</td>
+            <td>
+              <a
+                th:href="@{'/messages/delete/{id}'(id=${message.id})}"
+                class="btn btn-primary btn-sm"
+                ><i class="fa-solid fa-trash"></i> Sil</a
+              >
+            </td>
           </tr>
         </tbody>
       </table>
@@ -46,10 +62,15 @@
 
     <!-- Send Message Button -->
     <div class="text-center mt-4">
-      <a href="/messages/send" class="btn btn-primary btn-lg">Yeni Mesaj Gönder</a>
+      <a href="/messages/send" class="btn btn-primary btn-lg"
+        >Yeni Mesaj Gönder</a
+      >
     </div>
 
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script
+      src="../static/script/bootstrap.bundle.min.js"
+      th:src="@{/script/bootstrap.bundle.min.js}"
+    ></script>
   </body>
 </html>
