--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,22 +6,11 @@
     <title>Giriş Yap</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #f8f9fa;
-        }
-        .form-container {
-            margin-top: 100px;
-            background-color: #ffffff;
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-    </style>
+    <link rel="stylesheet" href="/css/style.css" th:href="@{/css/style.css}">
 </head>
 <body>
     <div class="container">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center align-content-center vh-100">
             <div class="col-md-4">
                 <div class="form-container">
                     <h3 class="text-center mb-4">Giriş Yap</h3>
@@ -39,7 +28,7 @@
                         </div>
                     </form>
                     <div class="text-center mt-3">
-                        <a href="/auth/register" class="btn btn-link">Yeni Hesap Oluştur</a>
+                        <a href="/auth/register" class="btn btn-link reg">Yeni Hesap Oluştur</a>
                     </div>
                 </div>
             </div>
