--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,22 +6,12 @@
     <title>Kayıt Ol</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #f8f9fa;
-        }
-        .form-container {
-            margin-top: 50px;
-            background-color: #ffffff;
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
+    <link rel="stylesheet" href="/css/style.css" th:href="@{/css/style.css}">
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center align-content-center vh-100">
             <div class="col-md-6">
                 <div class="form-container">
                     <h3 class="text-center mb-4">Kayıt Ol</h3>
@@ -43,7 +33,7 @@
                         </div>
                     </form>
                     <div class="text-center mt-3">
-                        <a href="/auth/login" class="btn btn-link">Giriş Yap</a>
+                        <a href="/auth/login" class="btn btn-link log">Giriş Yap</a>
                     </div>
                 </div>
             </div>
