--- a/src/main/resources/templates/sendMessage.html
+++ b/src/main/resources/templates/sendMessage.html
@@ -1,29 +1,70 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-<head>
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mesaj Gönder</title>
-</head>
-<body>
-    <h1>Mesaj Gönder</h1>
-    <form method="post" action="/messages/send">
-        <label for="senderUsername">Gönderen Kullanıcı Adı:</label>
-        <input type="text" id="senderUsername" name="senderUsername" required/><br/><br/>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet">
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      th:href="@{/css/bootstrap.min.css}"
+      rel="stylesheet"
+    />
+    <link
+      href="../static/css/style.css"
+      th:href="@{/css/style.css}"
+      rel="stylesheet"
+    />
+    <link
+      href="../static/css/fa-all-min.css"
+      th:href="@{/css/fa-all-min.css}"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div class="container">
-        <div th:replace="~{fragments/navbar :: navbar}"></div>
+      <div th:replace="~{fragments/navbar :: navbar}"></div>
 
-        <label for="receiverUsername">Alıcı Kullanıcı Adı:</label>
-        <input type="text" id="receiverUsername" name="receiverUsername" required/><br/><br/>
+      <!-- Form -->
+      <div class="form-container mx-auto col-md-6">
+        <form method="post" action="/messages/send">
+          <div class="mb-3">
+            <label for="receiverUsername" class="form-label"
+              >Alıcı Kullanıcı Adı:</label
+            >
+            <select name="receiverUsername" id="receiverUsername">
+              <option value="" selected disabled>Alıcı Seçiniz</option>
+              <option
+                th:each="user : ${users}"
+                th:value="${user.username}"
+                th:text="${user.username}"
+              ></option>
+            </select>
+          </div>
+          <div class="mb-3">
+            <label for="content" class="form-label">Mesaj İçeriği:</label>
+            <textarea
+              id="content"
+              name="content"
+              rows="4"
+              class="form-control"
+              required
+            ></textarea>
+          </div>
+          <div class="text-center">
+            <button type="submit" class="btn btn-primary btn-lg w-100">
+              Gönder
+            </button>
+          </div>
+        </form>
+        <div class="text-center mt-3">
+          <a href="/messages/inbox" class="btn btn-secondary"
+            >Gelen Kutusuna Dön</a
+          >
+        </div>
+      </div>
+    </div>
 
-        <label for="content">Mesaj İçeriği:</label>
-        <textarea id="content" name="content" rows="4" cols="50" required></textarea><br/><br/>
-
-        <button type="submit">Gönder</button>
-    </form>
-    <a href="/messages/inbox">Gelen Kutusuna Dön</a>
-</body>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
