--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -4,56 +4,40 @@
     position: sticky;
     top: 0;
     z-index: 1000;
-    transition: all 0.2s;
-}
+    background-color: #24273a !important;
 
-#navbar-ul {
-    transition: all 0.2s;
 }
 
 #navbar-ul>li {
-    position: relative !important;
+    position: relative;
     padding: 10px;
     transition: all 0.2s;
-
-    a {
-        text-decoration: none;
-        color: rgba(255, 255, 255, 0.699);
-        font-size: 1.1rem;
-    }
-
 }
 
-#navbar-ul>li:hover,
-#navbar-ul>li:focus {
-    padding-bottom: 0;
-    transition: all 0.2s;
-
-}
-
-#navbar-ul>li::after {
-    content: "";
-    height: 4px;
-    border-radius: 5px 5px 5px 5px;
-    width: 85%;
-    background-color: #91C8E4;
-    position: absolute;
-    bottom: 0;
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.2s ease-in-out;
+#navbar-ul>li a {
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.699);
+    font-size: 1.1rem;
 }
 
 #navbar-ul>li:hover::after,
 #navbar-ul>li:focus::after {
+    content: "";
+    height: 4px;
+    border-radius: 5px;
+    width: 85%;
+    background-color: #91C8E4;
+    position: absolute;
+    bottom: 0;
     opacity: 1;
-    transition: all 0.2s;
+    transition: all 0.2s ease-in-out;
 }
 
 #navbar-ul>li:hover>a {
-    color: rgb(241, 246, 249);
+    color: #f1f6f9;
     transition: all 0.2s;
 }
+
 
 body {
     background-color: #24273a;
@@ -71,6 +55,7 @@ body {
     color: rgb(241, 246, 249);
     text-align: center;
 }
+
 .table td {
     text-align: center;
 }
@@ -86,6 +71,19 @@ body {
     background-color: #ff677d;
     color: white;
 }
+
+.btn-primary:active {
+    background-color: #fd435f !important;
+    color: white;
+    transition: background-color 0.3s ease;
+}
+
+.btn-primary:focus-visible {
+    background-color: #fd435f !important;
+    color: white;
+    transition: background-color 0.3s ease;
+}
+
 .btn-lg:hover {
     color: white;
 }
@@ -119,6 +117,7 @@ body {
 
 .btn-secondary {
     background-color: #dc8a78;
+    color: #ffffff !important;
     border: none;
     transition: background-color 0.3s ease;
     margin-top: 15px;
@@ -127,6 +126,16 @@ body {
 
 .btn-secondary:hover {
     background-color: #dd7878;
+}
+
+.btn-secondary:active {
+    background-color: #db5b5b !important;
+    transition: background-color 0.3s ease;
+}
+
+.btn-secondary:focus-visible {
+    background-color: #db5b5b !important;
+    transition: background-color 0.3s ease;
 }
 
 a.btn {
@@ -140,7 +149,9 @@ a.btn:hover {
     color: #eeeeee;
     transition: color 0.3s ease;
 }
-.reg:hover, .log:hover {
+
+.reg:hover,
+.log:hover {
     color: #ed8796 !important;
     transition: color 0.3s ease;
 }
@@ -153,4 +164,35 @@ input:focus {
 input:focus-visible {
     border-color: #ff677d !important;
     box-shadow: 0 0 5px #ed8796 !important;
+}
+
+.custom-select {
+    border: 1px solid #f88698;
+    border-radius: 0.25rem;
+    padding: 0.375rem 0.75rem;
+    background-color: #fff;
+    height: calc(1.5em + 0.75rem + 2px) !important;
+    transition: all 0.3s ease;
+}
+
+.custom-select:focus {
+    border-color: #ff677d;
+    box-shadow: 0 0 0 0.2rem rgba(237,135,150,0.5);
+    transition: all 0.3s ease;
+}
+
+#filterInput {
+    border: 1px solid #f88698;
+    border-radius: 0.25rem;
+    margin-right: 1rem;
+    height: calc(1.5em + 0.75rem + 2px) !important;
+}
+
+@media (max-width: 768px) {
+
+    .table th,
+    .table td {
+        font-size: 14px;
+        white-space: nowrap;
+    }
 }
