--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,32 +1,42 @@
 <div class="container" th:fragment="navbar">
-  <div class="d-md-flex justify-content-md-center navbar-container">
-    <nav class="navbar navbar-expand-lg navbar-expand-sm">
+  <div class="navbar-container">
+    <nav class="navbar navbar-expand-lg navbar-dark ">
       <div class="container-fluid">
+        <!-- Navbar Toggler Button -->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Menüyü Aç/Kapat"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Navbar Links -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="navbar-ul">
+          <ul class="navbar-nav mx-auto mb-2 mb-lg-0" id="navbar-ul">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="/messages/inbox"
-                ><i class="fa-solid fa-inbox fa-lg"></i> Gelen Kutusu</a
-              >
+              <a class="nav-link active" aria-current="page" href="/messages/inbox">
+                <i class="fa-solid fa-inbox fa-lg"></i> Gelen Kutusu
+              </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/messages/sent"
-                ><i class="fa-solid fa-envelope-circle-check fa-lg"></i> Gönderilen Mesajlar</a
-              >
+              <a class="nav-link active" href="/messages/sent">
+                <i class="fa-solid fa-envelope-circle-check fa-lg"></i> Gönderilen Mesajlar
+              </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/messages/send"
-                ><i class="fa-solid fa-paper-plane fa-lg"></i></i> Yeni Mesaj Gönder</a
-              >
+              <a class="nav-link active" href="/messages/send">
+                <i class="fa-solid fa-paper-plane fa-lg"></i> Yeni Mesaj Gönder
+              </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link active" href="/logout">
-                  <i class="fa-solid fa-right-from-bracket fa-lg"></i> <span th:text="${username}"></span>
-                </a>
-              </li>
+              <a class="nav-link active" href="/logout">
+                <i class="fa-solid fa-right-from-bracket fa-lg"></i>
+                <span th:text="${username}"></span>
+              </a>
             </li>
           </ul>
         </div>
