--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,6 +6,7 @@
     <title>Giriş Yap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css" th:href="@{/css/style.css}">
+    <link rel="shortcut icon" type="image/png" th:href="@{/assets/favicon.png}"/>
 </head>
 <body>
     <div class="container">
