--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,6 +6,8 @@
     <title>Kayıt Ol</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css" th:href="@{/css/style.css}">
+    <link rel="shortcut icon" type="image/png" th:href="@{/assets/favicon.png}"/>
+
     </style>
 </head>
 <body>
